--- a/style.css
+++ b/style.css
@@ -1,5 +1,59 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 *{
     margin:0;
     padding:0;
     box-sizing:border-box;
+}
+body{
+    font-family: 'Poppins', sans-serif;
+}
+a{
+    text-decoration:none;
+}
+.button{
+    margin:20px 0;
+    display:inline-block;
+    padding:7px 25px;
+    background-image: linear-gradient(180deg, orange, tomato);
+    border-radius:5px;
+    color:white;
+    max-width:100%;
+    width:120px;
+    text-align: center;
+}
+.section{
+    padding:5% 10%;
+}
+.section-wrapper{
+    display:flex;
+    justify-content:space-between
+}
+.section-box{
+    width:40%;
+    max-width:100%
+}
+.section-text{
+    display:flex;
+    flex-direction: column;
+    align-self: center;
+}
+.section-text h2{
+    font-size:45px;
+}
+.section-text h1{
+    font-size:65px;
+}
+.section-text h1 span{
+    color:tomato;
+}
+.section-text h4{
+    font-weight:500;
+    margin-bottom:30px;
+}
+.section-text p{
+    color:gray;
+}
+.section-image img{
+    width:100%
 }
