--- a/style.css
+++ b/style.css
@@ -8,22 +8,37 @@
 body{
     font-family: 'Poppins', sans-serif;
 }
+.container{
+    width:1470px;
+    max-width:100%;
+    margin:auto;
+}
 a{
     text-decoration:none;
+}
+p{
+    margin-top:20px;
 }
 .button{
     margin:20px 0;
     display:inline-block;
-    padding:7px 25px;
-    background-image: linear-gradient(180deg, orange, tomato);
+    padding:10px 25px;
+    background-image: linear-gradient(160deg, orange, tomato);
     border-radius:5px;
     color:white;
     max-width:100%;
     width:120px;
     text-align: center;
 }
+.resume-btn{
+    width:250px;
+}
 .section{
-    padding:5% 10%;
+    padding:3% 5%;
+}
+.header_section{
+    background-image:url(images/top-banner.png);
+    background-repeat: no-repeat;
 }
 .section-wrapper{
     display:flex;
@@ -56,4 +71,52 @@ a{
 }
 .section-image img{
     width:100%
+}
+.dream_section{
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position:right;
+}
+.experience-section{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+.experience-box-wrapper{
+    margin:0 100px;
+}
+.experience-box{
+    margin:50px;
+    padding:50px;
+    width:50%;
+    max-width:100%;
+    box-shadow:10px 10px 30px gray;
+    border-radius: 5px;
+}
+.fullstack-dev{
+    border-left:5px solid black;
+    border-image:linear-gradient(180deg, orange, tomato);
+    border-image-slice: 1;
+}
+.baby-dev{
+    border-left:5px solid black;
+    border-image:linear-gradient(180deg, blue, cyan);
+    border-image-slice: 1;
+}
+.experience-box h4{
+    margin-top:15px;
+    color:orange;
+}
+.experience-box p{
+    color:gray;
+    line-height:22px;
+}
+footer{
+    padding:15px 0;
+    background-color: #f5f5f5;
+}
+footer p{
+    text-align:center;
+    font-size:14px;
+    color:gray
 }
